--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,10 +7,9 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
 
-
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         if(isCommonRunaAlone.toBoolean()){
             applicationId "com.example.common"
