--- a/login/src/main/AndroidManifest.xml
+++ b/login/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.login">
 
     <application android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".CellPhoneLoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
