--- a/login/src/main/manifest/AndroidManifest.xml
+++ b/login/src/main/manifest/AndroidManifest.xml
@@ -1,10 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.common" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.login" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <application android:allowBackup="true"
+        android:name="com.example.conmon.App"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="com.example.login.LoginActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="com.example.login.CellPhoneLoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
