--- a/gradle.properties
+++ b/gradle.properties
@@ -23,5 +23,6 @@ kotlin.code.style=official
 isCommonRunaAlone=false
 isMineRunAlone=true
 isFindRunAlone=true
-isLoginRunAlone=true
+isLoginRunAlone=false
+isMainRunAlone=false
 isPlayServiceAlone=true
