--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,12 @@
 buildscript {
     ext{
         kotlin_version =  '1.3.72'
-        lifecycle_version = "2.0.0"
+        lifecycle_version = '2.2.0'
         room_version = "2.1.0-alpha02"
-        paging_version = "2.1.0-beta01"
+        paging_version = '3.0.0-alpha02'
         nav_version = "1.0.0-alpha07"
         compileSdkVersion =29
-        buildToolsVersion ="29.0.2"
+        buildToolsVersion = "29.0.2"
     }
 
     repositories {
@@ -20,6 +20,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 
 }
 
