--- a/common/build.gradle
+++ b/common/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.core:core-ktx:1.3.0'
 //    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'androidx.test:runner:1.1.1'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
@@ -71,32 +71,23 @@ dependencies {
 
     //jetpack
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-    api 'androidx.room:room-runtime:2.0.0'
-    kapt 'androidx.room:room-compiler:2.0.0'
+    api 'androidx.room:room-runtime:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.5'
     api "androidx.paging:paging-runtime-ktx:$paging_version"
-    api 'androidx.navigation:navigation-fragment-ktx:2.0.0-rc02'
-    api 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02'
-
-    //kotlin协程
-    // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
-    api"org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
+    api 'androidx.navigation:navigation-fragment-ktx:2.3.0'
+    api 'androidx.navigation:navigation-ui-ktx:2.3.0'
 
     api 'org.kodein.di:kodein-di-framework-android-core:6.0.1'
     // ViewModel and LiveData
     api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/retrofit
-    api group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.5.0'
+    api group: 'com.squareup.retrofit2', name: 'retrofit', version: '2.9.0'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
-    api group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    api group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
-    api group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.5.0'
+    api group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
 
-    api 'com.uber.autodispose:autodispose-lifecycle-ktx:1.2.0'
-    api 'com.uber.autodispose:autodispose-android-ktx:1.2.0'
-    api 'com.uber.autodispose:autodispose-android-archcomponents-ktx:1.2.0'
-
-    api 'de.hdodenhof:circleimageview:3.0.0'
+    api 'de.hdodenhof:circleimageview:3.1.0'
     api 'androidx.cardview:cardview:1.0.0'
-    api 'com.github.bumptech.glide:glide:4.9.0'
+    api 'com.github.bumptech.glide:glide:4.11.0'
 }
