--- a/gradle.properties
+++ b/gradle.properties
@@ -21,8 +21,10 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 isCommonRunaAlone=false
-isMineRunAlone=true
-isFindRunAlone=true
+isMineRunAlone=false
+isFindRunAlone=false
 isLoginRunAlone=false
 isMainRunAlone=false
-isPlayServiceAlone=true
+isPlayServiceAlone=false
+isSongListAlone = false
+
