--- a/playerservice/src/main/AndroidManifest.xml
+++ b/playerservice/src/main/AndroidManifest.xml
@@ -1,2 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.playerservice" />
+    package="com.example.playerservice">
+
+    <application>
+        <service
+            android:name=".core.AVService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.examle.plapservice.connection"/>
+            </intent-filter>
+        </service>
+    </application>
+<!--    android:process="com.avplay.play_service"-->
+</manifest>
