--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     implementation project(':common')
    // annotationProcessor  "android.arch.persistence.room:compiler:$room_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
+    kapt 'androidx.room:room-compiler:2.0.0'
 //    implementation "androidx.lifecycle:lifecycle-commone-java8:$lifecycle_version"
  //   annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     if(!isLoginRunAlone.toBoolean()){
